crates/test-files/fixtures/compile_errors/return_call_to_fn_without_return.fe
contract Foo {
    pub fn foo() {
        revert
    }

    pub fn bar() -> u256 {
        return foo()
    }
}
